Test/git-issues/git-issue-3475.dfy.expect
git-issue-3475.dfy(8,4): Error: unresolved identifier: x
1 resolution/type errors detected in git-issue-3475.dfy
